type-of-motorcycle.html has a changes in the code

--- a/html/type-of-motorcycle.html
+++ b/html/type-of-motorcycle.html
@@ -15,11 +15,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/header.css" />
-    <link rel="stylesheet" href="/css/footer.css" />
-    <link rel="stylesheet" href="/css/types-motorcycle.css" />
-    <link rel="stylesheet" href="/css/motorcycle-reviews.css" />
+    <link rel="stylesheet" href="../css/general.css" />
+    <link rel="stylesheet" href="../css/header.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/types-motorcycle.css" />
+    <link rel="stylesheet" href="../css/motorcycle-reviews.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
@@ -40,16 +40,18 @@
           >
             <span><i class="bi bi-list"></i></span>
           </button>
-          <a class="navbar-brand" href="/html/home.html"
-            ><img src="/images/logo.png" alt=""
+          <a class="navbar-brand" href="../html/home.html"
+            ><img src="../images/logo.png" alt=""
           /></a>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="/html/motorcycle.html">MOTORCYCLE</a>
+                <a class="nav-link" href="../html/motorcycle.html"
+                  >MOTORCYCLE</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/html/login.html">MANAGE BOOKING</a>
+                <a class="nav-link" href="../html/login.html">MANAGE BOOKING</a>
               </li>
             </ul>
           </div>
@@ -67,11 +69,11 @@
             <div class="motorcycle-ratings d-flex align-items-center">
               <div class="rating d-flex align-items-center">
                 <strong style="margin-right: 5px">5.0</strong>
-                <img src="/icon/material-symbols_star.png" alt="" />
-                <img src="/icon/material-symbols_star.png" alt="" />
-                <img src="/icon/material-symbols_star.png" alt="" />
-                <img src="/icon/material-symbols_star.png" alt="" />
-                <img src="/icon/material-symbols_star.png" alt="" />
+                <img src="../icon/material-symbols_star.png" alt="" />
+                <img src="../icon/material-symbols_star.png" alt="" />
+                <img src="../icon/material-symbols_star.png" alt="" />
+                <img src="../icon/material-symbols_star.png" alt="" />
+                <img src="../icon/material-symbols_star.png" alt="" />
               </div>
               <p><strong>100</strong> <span>Reviews</span></p>
             </div>
@@ -81,32 +83,32 @@
           >
             <div class="motorcycle-specs">
               <div class="weight d-flex align-items-center">
-                <img src="/icon/weight.png" alt="" />
+                <img src="../icon/weight.png" alt="" />
                 <p><span>126</span> kg</p>
               </div>
               <div class="speed d-flex align-items-center">
-                <img src="/icon/speed.png" alt="" />
+                <img src="../icon/speed.png" alt="" />
                 <p><span>111</span> km/h</p>
               </div>
               <div class="height d-flex align-items-center">
-                <img src="/icon/height.png" alt="" />
+                <img src="../icon/height.png" alt="" />
                 <p><span>1150</span> mm</p>
               </div>
               <div class="types d-flex align-items-center">
-                <img src="/icon/automatic.png" alt="" />
+                <img src="../icon/automatic.png" alt="" />
                 <p>Automatic</p>
               </div>
               <div class="cc d-flex align-items-center">
-                <img src="/icon/motor-icon.png" alt="" />
+                <img src="../icon/motor-icon.png" alt="" />
                 <p><span>155</span> cc</p>
               </div>
               <div class="horsepower d-flex align-items-center">
-                <img src="/icon/horse.png" alt="" />
+                <img src="../icon/horse.png" alt="" />
                 <p>15.1</p>
               </div>
             </div>
             <div class="motorcycle-image">
-              <img src="/images/yamahaAeroxBlack.png" alt="" />
+              <img src="../images/yamahaAeroxBlack.png" alt="" />
             </div>
           </div>
         </div>
@@ -122,7 +124,7 @@
               class="quantity d-flex justify-content-center align-items-center"
             >
               <div class="number d-flex align-items-center">
-                <img src="/icon/motor-icon1.png" alt="" />
+                <img src="../icon/motor-icon1.png" alt="" />
                 <p>1</p>
               </div>
               <div class="add"><strong>+</strong></div>
@@ -177,14 +179,14 @@
           <h2>Included in the Price</h2>
           <div class="d-flex justify-content-around justify-content-lg-evenly">
             <div class="included-item1 d-flex align-items-center">
-              <img src="/icon/helmet.png" alt="" />
+              <img src="../icon/helmet.png" alt="" />
               <p>Free Helmet</p>
-              <img src="/icon/check.png" alt="" />
+              <img src="../icon/check.png" alt="" />
             </div>
             <div class="included-item2 d-flex align-items-center">
-              <img src="/icon/gas.png" alt="" />
+              <img src="../icon/gas.png" alt="" />
               <p>2Ltr fuel</p>
-              <img src="/icon/check.png" alt="" />
+              <img src="../icon/check.png" alt="" />
             </div>
           </div>
         </div>
@@ -196,25 +198,25 @@
           >
             <div class="col d-flex">
               <div class="check-box">
-                <img src="/icon/check-box.png" alt="" />
+                <img src="../icon/check-box.png" alt="" />
               </div>
               <p>Pants <span>₱450</span></p>
             </div>
             <div class="col d-flex">
               <div class="check-box">
-                <img src="/icon/check-box.png" alt="" />
+                <img src="../icon/check-box.png" alt="" />
               </div>
               <p>Jacket <span>₱450</span></p>
             </div>
             <div class="col d-flex">
               <div class="check-box">
-                <img src="/icon/check-box.png" alt="" />
+                <img src="../icon/check-box.png" alt="" />
               </div>
               <p>Helmet <span>₱200</span></p>
             </div>
             <div class="col d-flex">
               <div class="check-box">
-                <img src="/icon/check-box.png" alt="" />
+                <img src="../icon/check-box.png" alt="" />
               </div>
               <p>Phone Holder <span>₱150</span></p>
             </div>
@@ -260,7 +262,7 @@
 
       <div class="container-fluid px-5 d-flex user-review">
         <div class="user-review-img">
-          <img src="/images/iannnn.png" alt="" />
+          <img src="../images/iannnn.png" alt="" />
         </div>
         <div class="row">
           <p>Adriane Garcia</p>
@@ -284,7 +286,7 @@
       <hr />
       <div class="container-fluid px-5 d-flex user-review">
         <div class="user-review-img">
-          <img src="/images/iannnn.png" alt="" />
+          <img src="../images/iannnn.png" alt="" />
         </div>
         <div class="row">
           <p>Adriane Garcia</p>
@@ -303,7 +305,7 @@
     <footer>
       <div class="footerSection">
         <div class="footer-col-one">
-          <a href="home.html"><img src="/images/logo.png" alt="" /></a>
+          <a href="home.html"><img src="../images/logo.png" alt="" /></a>
           <p>Don't dream it, Ride it!</p>
         </div>
         <div class="footer-col-two">
@@ -319,8 +321,8 @@
             updates.
           </p>
           <div class="socialMedia">
-            <img src="/icon/facebook.png" alt="" />
-            <img src="/icon/ri_instagram-fill.png " alt="" />
+            <img src="../icon/facebook.png" alt="" />
+            <img src="../icon/ri_instagram-fill.png " alt="" />
           </div>
         </div>
       </div>
